подправил зависимости, в auth-service сделал рефакторинг Требует доработки класс JwtAuthenticationFilterTest (не все тесты прошли)